--- a/css/styles_informacion.css
+++ b/css/styles_informacion.css
@@ -1,35 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
-*{margin: 0px; padding: 0px; font-family: 'Roboto', sans-serif; box-sizing: content-box;}
-.bg-white{background-color: white;}
-.tam{width: 100%; height: 100%;}
+*{font-family: 'Roboto', sans-serif; box-sizing: content-box;}
 .fs-24-bold{font-size: 24px; font-weight: bold; background-color: #104494; color: white;}
-.fs-18{font-size: 20px;}
+.fs-18{font-size: 18px;}
+.mt-75{margin-top: 75px;}
 
-.modal{
-    box-shadow: 5px 5px 10px 0px #c9c0c0;
-    width: 1300px;
-    height: 500px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.caja{
+    height: 600px;
+    width: 85%;
+    top: 80px;
+    left: 10%;
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.grilla div{
-    height: 100%;
-    text-align: center;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);    
 }
 
 .fondo_transparente{
-    top: 0;
-    left: 0;
-    background: rgba(83, 83, 83, 0.226);
+    z-index: 1;
+    top: 0px;
+    left: 0px;
     position: absolute;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     display: none;
 }
@@ -47,7 +39,7 @@
     cursor: pointer;
 }
 
-.align-items-center .fila div{
+.bloque{
     border: #c9c0c0 solid 1px;
     border-top: none;
 }
