--- a/css/styles_informacion.css
+++ b/css/styles_informacion.css
@@ -7,13 +7,10 @@
 
 .caja{
     height: 600px;
-    width: 85%;
-    top: 80px;
-    left: 10%;
+    width: 75%;
+    top: 30%;
+    left: 12.5%;
     position: absolute;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);    
 }
 
 .fondo_transparente{
@@ -25,6 +22,16 @@
     width: 100%;
     display: none;
 }
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+  }
 
 .modal_cerrar{
     position: absolute;
@@ -42,4 +49,7 @@
 .bloque{
     border: #c9c0c0 solid 1px;
     border-top: none;
+    width: 33.33%;
+    padding: 0px;
+    margin: 20px;
 }
