--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@
     background: #104494;
 }
 
-
-
 .cabecera {
     height: 80px;
 }
@@ -44,28 +42,15 @@ li {
     padding-left: 10px;
 }
 
-
-
-
-
 .titulo {
     font-size: 20px;
     text-align: center;
     font-weight: bolder;
 }
 
-
 .information {
     margin-top: 30px !important;
 }
-
-
-
-
-
-
-
-
 
 /*consultaReporte*/
 
@@ -101,8 +86,9 @@ li {
 }
 
 #consultar{
-    background-color: #4A7D8C;
+    background-color: #104494;
     color: white;
+    font-weight: bolder;
     border: 0px;
     border-radius: 10px;
     padding: 3px 20px;
@@ -120,7 +106,7 @@ li {
 }
 
 .download-icon{
-    color: #4A7D8C;
+    color: #104494;
     font-size: 30px;
     display: grid;
     justify-content: center;
@@ -151,13 +137,4 @@ li {
     border: 0px;
     border-radius: 10px;
     padding: 5px 8px;
-}
-
-/*Lenguaje y tamaño de letra*/
-.font-lng{
-    background-color: #2371E7;
-}
-.font-lng button{
-    background-color: #2371E7;
-    border: 0px;
 }
