--- a/css/styles_informacion.css
+++ b/css/styles_informacion.css
@@ -9,6 +9,7 @@
     height: 600px;
     width: 75%;
     top: 30%;
+    overflow: auto;
     left: 12.5%;
     position: absolute;
 }
@@ -21,6 +22,7 @@
     height: 100%;
     width: 100%;
     display: none;
+    
 }
 
 #overlay {
